--- a/package.json
+++ b/package.json
@@ -1,5 +1,13 @@
 {
   "dependencies": {
-    "discord.js": "^14.11.0"
+    "@discord-player/extractor": "^4.4.0",
+    "@discordjs/opus": "^0.9.0",
+    "@discordjs/voice": "^0.16.0",
+    "discord-player": "^6.6.1",
+    "discord.js": "^14.11.0",
+    "libsodium": "^0.7.11",
+    "libsodium-wrappers": "^0.7.11",
+    "ytdl-core": "^4.11.5",
+    "ytsr": "^3.8.2"
   }
 }
